overflow fix

--- a/src/pages/auth-pages/style.css
+++ b/src/pages/auth-pages/style.css
@@ -128,6 +128,7 @@
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   position: relative;
+  overflow: hidden;
 }
 .left-box::after {
   content: '';
